# FastX-Tui

./: .gitignore  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_SYSTEM_BLUEPRINT.md  README.md  check_version.py  cookiecutter.json  fastx_tui.sqlite  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: bump-version.yml  release.yml
config/: config_manager.py  default_config.json
core/: __init__.py  app_manager.py  config_manager.py  logger.py  menu_system.py  network_tools.py  operations.py  plugin_manager.py  plugin_proxy.py  startup_manager.py  task_manager.py  update_manager.py  venv_manager.py  version.py  view_manager.py
docs/: changelog.md  faq.md  index.md
docs/configuration/: advanced.md  options.md
docs/development/: auto_docs.md  contributing.md  environment.md  workflow.md
docs/features/: config_management.md  log_management.md  platform_tools.md  plugin_system.md  task_management.md
docs/plugin_development/: architecture.md  blueprint.md  examples.md
docs/quickstart/: getting_started.md  installation.md
features/: search.py
features/config/: __init__.py  config_interface.py  config_manager.py
features/help/: __init__.py  help_interface.py
features/log_management/: __init__.py  log_interface.py  log_manager.py
features/logging/: __init__.py  logging_interface.py
features/plugin/: __init__.py  plugin_interface.py  plugin_manager.py
features/search/: __init__.py  search_interface.py
features/task/: __init__.py  task_interface.py
features/update/: update_interface.py
locales/: en_US.json  ja_JP.json  ko_KR.json  pyi18n_manager.py  zh_CN.json
models/: config_schema.py  plugin_schema.py
plugins/: README.md  example_plugin.py
tools/: build_commands.py  docs_commands.py  ruff_commands.py
{{cookiecutter.plugin_name}}/: README.md  config_schema.json  fastx_tui_plugin.py  manual.md  pyproject.toml  {{cookiecutter.plugin_name}}_business.py
{{cookiecutter.plugin_name}}/.github/workflows/: bump-version.yml
