[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "fastx-tui"
version = "0.1.27"
description = "FastX TUI - 统一视图架构版本"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "loguru>=0.7.3", "psutil>=5.9.0", "pyyaml>=6.0", "rich>=13.0.0", "setuptools>=80.9.0", "requests>=2.31.0", "toml>=0.10.2",]

[project.scripts]
fastx-tui = "main:main"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "core", "config", "features", "locales", "plugins",]
exclude = [ "*.tests", "*.tests.*", "tests.*", "tests",]
