[project]
name = "fastx-tui-plugin-{{ cookiecutter.plugin_name.lower() }}"
version = "{{ cookiecutter.plugin_version }}"
description = "{{ cookiecutter.plugin_description }}"
authors = [
    {
        "name" = "{{ cookiecutter.plugin_author }}",
    },
]
license = { text = "{{ cookiecutter.license }}" }
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "{{ cookiecutter.plugin_repository }}"
Repository = "{{ cookiecutter.plugin_repository }}"

[tool.uv]
python-version = "3.10"

[tool.uv.dependencies]
# 添加插件依赖

[tool.uv.scripts]
# 添加脚本命令

[build-system]
requires = ["uv>=0.1.0"]
build-backend = "uv.build"